--- a/UC alert tool/Views/Shared/_SettingsPartial.cshtml
+++ b/UC alert tool/Views/Shared/_SettingsPartial.cshtml
@@ -9,7 +9,7 @@
             </li>
             <li id="sidebar-divider"></li>
             <li>
-                <a href="~/instellingen/hangfire" class=""><i class="fa fa-database fa-fw"></i> Database synchronisatie</a>
+                <a href="~/instellingen/hangfire" class=""><i class="fa fa-database fa-fw"></i> Database instellingen</a>
             </li>
             <li>
                 <a href="~/instellingen/emailtemplate" class=""><i class="fa fa-address-book fa-fw"></i> Email template</a>
