--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("Instellingen", "Index", "Instellingen")</li>
                                 <li role="presentation" class="divider"></li>
-                                <li>@Html.ActionLink("Database synchronisatie", "hangfire", "Instellingen")</li>
+                                <li>@Html.ActionLink("Database instellingen", "hangfire", "Instellingen")</li>
                                 <li>@Html.ActionLink("Email template", "emailtemplate", "Instellingen")</li>
                                 <li>@Html.ActionLink("Log instellingen", "logging", "Instellingen")</li>
                                 <li>@Html.ActionLink("SMS gateway", "smsgateway", "Instellingen")</li>
