--- a/UC alert tool/Views/Home/Contact.cshtml
+++ b/UC alert tool/Views/Home/Contact.cshtml
@@ -8,5 +8,5 @@
 </address>
 
 <address>
-    <strong>Support afdeling:</strong>   <a href="mailto:service@ucsystems.nl?SUBJECT=RE: Service UC Systems.nl">service@ucsystems.nl</a><br />
+    <strong>Support afdeling:</strong>   <a href="mailto:service@ucsystems.nl?SUBJECT=RE:Reactie vanuit alert tool">service@ucsystems.nl</a><br />
 </address>
